Show book series number

--- a/1.0.0/src/less/app.less
+++ b/1.0.0/src/less/app.less
@@ -18,4 +18,19 @@
   .nav-tabs {
     height: 40px;
   }
+
+  .thumbnail {
+    position: relative;
+
+    h1 {
+      position: absolute;
+      color: white;
+      font-size: 81px;
+      text-shadow: 2px 2px 2px black;
+      text-align: center;
+      margin: 0 auto;
+      left: 55px;
+      top: 23px;
+    }
+  }
 }
