--- a/1.0.0/src/less/app.less
+++ b/1.0.0/src/less/app.less
@@ -33,4 +33,38 @@
       top: 23px;
     }
   }
+
+  .owned {
+    h1 {
+      //color: black;
+    }
+
+    img {
+      //opacity: 0.8;
+    }
+
+    i.check {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+  }
+
+  .white-border {
+    text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+  }
+
+  .overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0.5;
+    background-color: white;
+  }
+
+  .btn-default {
+    color: black !important;
+  }
 }
