--- a/1.0.0/src/less/app.less
+++ b/1.0.0/src/less/app.less
@@ -50,6 +50,12 @@
     }
   }
 
+  i.ignore {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+  }
+
   .white-border {
     text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
   }
