--- a/app/src/less/app.less
+++ b/app/src/less/app.less
@@ -77,4 +77,12 @@
   a.thumbnail {
     overflow: hidden;
   }
+
+  .st-sort-ascent:before {
+    content: '\25B2';
+  }
+
+  .st-sort-descent:before {
+    content: '\25BC';
+  }
 }
