Max width on table columns. Add global search

--- a/app/src/less/app.less
+++ b/app/src/less/app.less
@@ -87,6 +87,10 @@
   }
 
   .thumb {
-    max-width: 100px;
+    max-width: 80px;
+  }
+  table {
+    table-layout: fixed;
+    width: 100px;
   }
 }
