Add boolean filter for downloaded, ignored, incognito and missing

--- a/app/src/less/app.less
+++ b/app/src/less/app.less
@@ -93,4 +93,10 @@
     table-layout: fixed;
     width: 100px;
   }
+  select.input-xs {
+    height: 20px;
+    line-height: 20px;
+    font-size: 11px;
+    padding: 0px 10px;
+  }
 }
