Hide original page (legal-term error page) on start
When loading the extension the default error-page
for the legal-terms page would show.
This fix will hide that content until app is loaded.

--- a/ext/clear.css
+++ b/ext/clear.css
@@ -1,3 +1,15 @@
-#wrapper {
+#wrapper, body {
     display: none;
+}
+
+body.show {
+    display: block;
+}
+
+html:after {
+    content: 'Loading...';
+}
+
+html.show:after {
+    content: '';
 }
