Add progress component

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,3 +3,4 @@
 @import "@material/card/mdc-card";
 @import "@material/layout-grid/mdc-layout-grid";
 @import "@material/textfield/mdc-text-field";
+@import "@material/linear-progress/mdc-linear-progress";
