--- a/src/main.scss
+++ b/src/main.scss
@@ -8,3 +8,4 @@
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/menu/mdc-menu";
 @import "@material/select/mdc-select";
+@import "@material/switch/mdc-switch";
