--- a/src/main.scss
+++ b/src/main.scss
@@ -9,3 +9,4 @@
 @import "@material/menu/mdc-menu";
 @import "@material/select/mdc-select";
 @import "@material/switch/mdc-switch";
+@import "@material/elevation/mdc-elevation";
